--- a/src/App.css
+++ b/src/App.css
@@ -33,14 +33,29 @@
 }
 
 
-/*************** SEARCH BAR ********************/
 
-.searchInput{
-  border-radius:3px;
-  padding: 8px;
-  border: 1px solid #b0b0b0;
-  background : #ffffff;
-  
+/*************** APPSHELL/NAVBAR ********************/
+.mantine-Navbar-root, .mantine-AppShell-main{
+	min-height: 100vh;
+}
+
+.nav-link {
+	padding: 0 8px;
+	height: 50px;
+	border-radius: 4px;
+}
+.nav-link:hover {
+	background-color: rgb(248,249,250);
+	cursor: pointer;
+}
+.nav-link a {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+.nav-link a button {
+	width: 100%;
+	height: 100%;
 }
 
 
