--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .App {
   text-align: center;
 }
@@ -32,8 +34,28 @@
   }
 }
 
+/*************** GENERAL ********************/
+
+section {
+	margin-bottom: 24px;
+}
 
 
+.report-list-card {
+	cursor: pointer;
+	margin-bottom: 24px;
+}
+
+.user-btn {
+	width: 100%;
+	padding: 10px;
+	border-top: 1px solid rgb(233, 236, 239)
+}
+
+.user-btn:hover {
+	background-color: #f8f9fa;
+	border-radius: 4px;
+}
 /*************** APPSHELL/NAVBAR ********************/
 .mantine-Navbar-root, .mantine-AppShell-main{
 	min-height: 100vh;
@@ -81,3 +103,22 @@
   height: auto;
 }
 
+/************** TABLE *************************/
+
+table {
+	background-color: white;
+	border-radius: 8px;
+	border: 1px solid #DEE2E6;
+
+}
+
+thead, tfoot {
+	background-color: #F1F3F5;
+}
+
+/************** PDF *************************/
+
+.pdf-viewer {
+	width: 100%;
+	height: 1000px;
+}
